<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/taskhead_background_color"
    tools:context=".taskheads.TaskHeadsFragment"
    android:id="@+id/swipe_refresh_layout">

    <com.kiwi.auready.util.view.DragSortListView
        android:id="@+id/taskheads"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/list_divider"
        android:dividerHeight="1dp" />

    <TextView
        android:id="@+id/no_taskhead_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_taskheads"/>

</android.support.v4.widget.SwipeRefreshLayout>
