...
    <string name="add_taskview">+ ADD NEW TASK</string>
    <string name="no_taskheads">You have no TO-DOs!</string>
    <string name="edit_tasks_ab_title">EDIT TASKS</string>
    <string name="add_tasks_ab_title">NEW TASKS</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="no_tasks">No Tasks. Add new task!</string>
    <string name="taskhead_empty_err">empty tasks and title</string>
    <string name="menu_title">TITLE</string>
    <string name="edit_title">EDIT TITLE</string>
    <string name="edit_task">EDIT</string>
    <!-- Server Client ID. This should be a valid web oauth 2.0 client id obtained
    from  https://console.developers.google.com/ -->
    <string name="google_server_client_id">40132084235-d35aomfismjre6uc5pg8uac6f1vd3ja8.apps.googleusercontent.com</string>
    <string name="add_taskhead">+ ADD TASK LIST</string>
    <string name="menu_create">Create</string>
    <string name="taskheadsetting_title">Setting Task List</string>
    <string name="taskheaddetail_title">Title</string>
    <string name="member_title">Members</string>
    <string name="label_title">Label</string>
    <string name="choose_label_bt">+ Choose a Label</string>
    <string name="empty_taskhead_message">TASKHEAD cannot be empty!</string>
    <string name="add_member">Add member</string>
    <string name="delete_member">Delete member</string>
...
