<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="20dp"
    android:paddingTop="20dp">

    <ImageView
        android:id="@+id/taskhead_picker_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="@drawable/taskhead_picker_color_selector"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/taskhead_picker_color"
        android:orientation="vertical">

        <TextView
            android:id="@+id/taskhead_title"
            style="@style/listview_textview_style"
            android:layout_marginEnd="@dimen/task_head_title_end_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin" />
    </LinearLayout>

    <ImageView
        android:id="@+id/reorder"
        style="@style/listview_reorder_icon_style"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/listview_item_start_end_margin"
        android:src="@drawable/re_order_icon" />

</RelativeLayout>