<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimaryDark"
    android:gravity="fill_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="1"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".taskheads.TaskHeadsActivity">

    <RelativeLayout
        android:id="@+id/nav_header_account_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
        <TextView
            android:id="@+id/nav_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:text="@string/logged_in_user_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center_vertical" />
        <TextView
            android:id="@+id/nav_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:text="@string/logged_in_user_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="bottom" />
        <Button
            android:id="@+id/bt_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/nav_logout" />
    </RelativeLayout>
</LinearLayout>