<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/friend_navigation_menu_item"
        android:title="@string/friend_title" />
</menu>