<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/add_taskview_bt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/add_taskview" />
</LinearLayout>