<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kiwi.auready.friend.FriendsFragment">

    <!-- Loading indicator -->
    <TextView
        android:id="@+id/loading_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Show Friend List -->
    <LinearLayout
        android:id="@+id/friend_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/friend_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/list_divider"
            android:dividerHeight="1dp" />
    </LinearLayout>

    <!-- Show no friends message -->
    <LinearLayout
        android:id="@+id/no_friends_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_no_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_friends_msg" />
    </LinearLayout>
</LinearLayout>
